[gd_scene load_steps=7 format=2]

[ext_resource path="res://GUIs/HUD/assets/font/Comfortaa-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://GUIs/Menus/LaberintoParametrizableTest.gd" type="Script" id=3]
[ext_resource path="res://Red/NetworkManager.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[node name="LaberintoParametrizableTest" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -213.0
margin_top = -86.0
margin_right = 214.0
margin_bottom = 149.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
margin_left = 10.0
margin_top = 10.0
margin_right = 417.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_right = 407.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 5

[node name="Label" type="Label" parent="Panel/VBoxContainer/HBoxContainer"]
margin_top = 2.0
margin_right = 71.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 1 )
text = "Nombre:"

[node name="Nombre" type="LineEdit" parent="Panel/VBoxContainer/HBoxContainer"]
margin_left = 76.0
margin_right = 276.0
margin_bottom = 24.0
rect_min_size = Vector2( 200, 0 )
text = "jjramos"

[node name="HBoxContainer3" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 28.0
margin_right = 407.0
margin_bottom = 52.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 5

[node name="Label" type="Label" parent="Panel/VBoxContainer/HBoxContainer3"]
margin_top = 2.0
margin_right = 103.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 1 )
text = "Habitaci√≥n: "

[node name="partidaID" type="LineEdit" parent="Panel/VBoxContainer/HBoxContainer3"]
margin_left = 108.0
margin_right = 308.0
margin_bottom = 24.0
rect_min_size = Vector2( 200, 0 )
text = "Room00"

[node name="HSeparator2" type="HSeparator" parent="Panel/VBoxContainer"]
margin_top = 56.0
margin_right = 407.0
margin_bottom = 60.0

[node name="HBoxContainer6" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 64.0
margin_right = 407.0
margin_bottom = 88.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 5

[node name="Label" type="Label" parent="Panel/VBoxContainer/HBoxContainer6"]
margin_top = 2.0
margin_right = 76.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 1 )
text = "Servidor:"

[node name="Servidor" type="LineEdit" parent="Panel/VBoxContainer/HBoxContainer6"]
margin_left = 81.0
margin_right = 281.0
margin_bottom = 24.0
rect_min_size = Vector2( 200, 0 )
text = "localhost"

[node name="HBoxContainer5" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 92.0
margin_right = 407.0
margin_bottom = 116.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 5

[node name="Label" type="Label" parent="Panel/VBoxContainer/HBoxContainer5"]
margin_top = 2.0
margin_right = 59.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 1 )
text = "Puerto:"

[node name="Puerto" type="LineEdit" parent="Panel/VBoxContainer/HBoxContainer5"]
margin_left = 64.0
margin_right = 264.0
margin_bottom = 24.0
rect_min_size = Vector2( 200, 0 )
text = "9090"

[node name="Button" type="Button" parent="Panel/VBoxContainer"]
margin_top = 120.0
margin_right = 407.0
margin_bottom = 145.0
custom_fonts/font = SubResource( 2 )
text = "Conectar"

[node name="Button2" type="Button" parent="Panel/VBoxContainer"]
margin_top = 149.0
margin_right = 407.0
margin_bottom = 174.0
custom_fonts/font = SubResource( 2 )
text = "Conectar (SIM)"

[node name="Status" type="Label" parent="Panel/VBoxContainer"]
margin_top = 178.0
margin_right = 407.0
margin_bottom = 197.0
custom_fonts/font = SubResource( 3 )

[node name="HBoxContainer7" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 201.0
margin_right = 407.0
margin_bottom = 225.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 5
alignment = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/HBoxContainer7"]
margin_left = 100.0
margin_top = 2.0
margin_right = 202.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 1 )
text = "(MatildaLib:)"

[node name="PuertoLib" type="LineEdit" parent="Panel/VBoxContainer/HBoxContainer7"]
margin_left = 207.0
margin_right = 407.0
margin_bottom = 24.0
rect_min_size = Vector2( 200, 0 )
text = "9998"
align = 2

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="NetworkManager" type="Node" parent="."]
script = ExtResource( 4 )
[connection signal="pressed" from="Panel/VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="players_list_update" from="NetworkManager" to="." method="_on_NetworkManager_players_list_update"]
[connection signal="register_reply" from="NetworkManager" to="." method="_on_NetworkManager_register_reply"]
[connection signal="start_match" from="NetworkManager" to="." method="_on_NetworkManager_start_match"]
